Slanted dividers fixed (#45)
* any overflow-x is now hidden

* re-added the accidently removed text in the about section

* Move modals outside of element so it does not get cut off by slant divider

* fixed slanted divider problem on wide screens

* nav bar reorder

--- a/css/style.css
+++ b/css/style.css
@@ -285,6 +285,7 @@ h6 {
   margin: 0;
   padding: 0;
   list-style: none;
+  max-width: 100vw;
 }
 
 .nav-menu ul {
@@ -655,6 +656,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   background-size: cover;
   overflow: hidden;
   position: relative;
+  padding: 10px;
 
   clip-path: polygon(
     0 0,
@@ -915,9 +917,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   overflow: hidden;
   position: relative;
   color: #fff;
- 
-  margin-top: -17vh;
-  z-index: -1;
+  z-index:-1;
+  margin-top: -20vh;
 
   clip-path: polygon(
     0 0,
@@ -964,7 +965,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #speakers {
-  padding: 10vh 0 23vh;
+  padding: 15vh 0 24vh;
   margin-top: -17vh;
   z-index: -2;
 
@@ -1090,7 +1091,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #schedule {
-  padding: 10vh 0 20vh;
+  padding: 12vh 0 25vh;
   margin-top: -17vh;
   z-index: -11;
 
@@ -1223,16 +1224,8 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #venue {
-  padding: 23vh 0;
+  padding: 23vh 10vh 30vh;
   margin-top: -17vh;
-  z-index: -3;
-
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% 100%,
-    0 calc(100% - 7vw)
-  );
 }
 
 #venue .container-fluid {
@@ -1422,7 +1415,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #supporters {
-  padding: 5vh 0 6vh;
+  padding: 7vh;
 }
 
 #supporters .supporters-wrap {
@@ -1497,16 +1490,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #faq {
-  padding: 5vh 0 23vh 0;
-
-  z-index: -10;
-
-  clip-path: polygon(
-    0 0,
-    100% 0,
-    100% 100%,
-    0 calc(100% - 7vw)
-  );
+  padding: 5vh 0 23vh 5vh;
 }
 
 #faq #faq-list {
@@ -1627,9 +1611,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 -------------------------------------------------------------- */
 
 #buy-tickets {
-  padding: 10vh 0 23vh 0;
-
-  z-index: -10;
+  padding: 10vh 0 25vh;
 
   clip-path: polygon(
     0 0,
@@ -1637,6 +1619,10 @@ body.mobile-nav-active #mobile-nav-toggle {
     100% 100%,
     0 calc(100% - 7vw)
   );
+}
+
+.modal {
+  z-index: 100;
 }
 
 @media screen and (prefers-reduced-motion: reduce) {
@@ -1892,8 +1878,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   background: #101522;
   color: #eee;
   font-size: 14px;
-  padding: 15vh 0 3vh;
-  margin-top: -15vh;
+  padding: 20vh 0 5vh;
+  margin-top: -20vh;
 }
 
 #footer .footer-top {
@@ -2215,14 +2201,17 @@ body.mobile-nav-active #mobile-nav-toggle {
 @media screen and (max-width: 800px) {
   /* small devices */
   #about {
-    padding: 26vh 10px 18vh;
+    padding: 26vh 10px 16vh;
+  }
+  #buy-tickets {
+    padding-bottom: 12vh;
   }
 }
 
 @media screen and (min-width: 800px) and (max-width: 1024px) {
   /* medium devices */
   #about {
-    padding: 26vh 10px 18vh;
+    padding: 26vh 10px 17vh;
   }
 }
 
@@ -2230,6 +2219,11 @@ body.mobile-nav-active #mobile-nav-toggle {
 @media screen and (min-width: 1024px) {
   /* large devices */
   #about {
-    padding: 22vh 10px 23vh;
+    padding: 50vh 10px 25vh;
+    margin-top: -40vh;
+  }
+  #footer {
+    padding: 35vh 0 5vh;
+    margin-top: -35vh;
   }
 }
